--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
-  "name": "@resolvai/shared-types",
+  "name": "@resolvai/shared-schemas",
   "version": "0.1.0",
-  "description": "Shared types and data structures for ResolvAI projects",
+  "description": "Shared schemas, prompt configurations, and type definitions for ResolvAI projects",
   "main": "dist/index.js",
   "types": "dist/index.d.ts",
   "files": [
@@ -13,9 +13,13 @@
     "clean": "rm -rf dist"
   },
   "keywords": [
+    "schemas",
+    "prompts",
+    "database",
     "types",
     "shared",
-    "typescript"
+    "typescript",
+    "drizzle"
   ],
   "license": "MIT",
   "peerDependencies": {
