--- a/package.json
+++ b/package.json
@@ -2,24 +2,24 @@
   "name": "@resolvai/shared-schemas",
   "version": "0.1.0",
   "description": "Shared schemas, prompt configurations, and type definitions for ResolvAI projects",
-  "main": "dist/index.ts",
-  "types": "dist/index.ts",
+  "main": "src/index.ts",
+  "types": "src/index.ts",
   "exports": {
     ".": {
-      "types": "./dist/index.ts",
-      "default": "./dist/index.ts"
+      "types": "./src/index.ts",
+      "default": "./src/index.ts"
     },
     "./db-schema": {
-      "types": "./dist/db-schema/index.ts",
-      "default": "./dist/db-schema/index.ts"
+      "types": "./src/db-schema/index.ts",
+      "default": "./src/db-schema/index.ts"
     },
     "./config": {
-      "types": "./dist/config/index.ts",
-      "default": "./dist/config/index.ts"
+      "types": "./src/config/index.ts",
+      "default": "./src/config/index.ts"
     },
     "./shared-types": {
-      "types": "./dist/shared-types/index.ts",
-      "default": "./dist/shared-types/index.ts"
+      "types": "./src/shared-types/index.ts",
+      "default": "./src/shared-types/index.ts"
     }
   },
   "files": [
