--- a/package.json
+++ b/package.json
@@ -49,14 +49,16 @@
   },
   "devDependencies": {
     "@types/node": "^22.19.1",
-    "drizzle-kit": "^0.31.7",
-    "typescript": "^5.0.0",
     "@typescript-eslint/eslint-plugin": "^8.46.4",
+    "drizzle-kit": "^0.31.7",
     "eslint": "^9.35.0",
     "eslint-config-prettier": "^10.1.8",
-    "prettier": "^3.6.2"
+    "prettier": "^3.6.2",
+    "typescript": "^5.0.0"
   },
   "dependencies": {
-    "@sinclair/typebox": "^0.34.41"
+    "@sinclair/typebox": "^0.34.41",
+    "neostandard": "^0.12.2",
+    "zod": "^4.1.12"
   }
 }
